src/test/deca/syntax/invalid/avecObjet/pasDeExtends.deca
class A extends {
    int a;
}